k8s/policies/validate-task-request-properties/tests/bad-level.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: bad-invalid-level
  namespace: compute
spec:
  issuer: issuer
  datasets: [d]
  requirements:
    gpu-model: 3
