k8s/policies/validate-task-request-properties/tests/ok-zero-level.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: ok-zero-level
  namespace: compute
spec:
  issuer: issuer
  datasets: [d]
  requirements:
    gpu-model: 0
