k8s/policies/validate-task-request-properties/tests/ok.yaml
apiVersion: policydriven.unimi.it/v1alpha1
kind: TaskRequest
metadata:
  name: ok-valid
  namespace: compute
spec:
  issuer: issuer
  datasets: [d]
  requirements:
    gpu-model: 2
